tests/syntax-error/src/syntax_error.gleam
import gleam/io

pub fn main() {
  [
}
